# PACBED-CNN

./: .gitignore  README.md
CNN_Prediction/: CNN_Prediction.py  Refactored-prediction.ipynb  requirements.txt
CNN_Tensorflow_Lite/: CNN_Training.py  Refactored-prediction_fasten_tflite.ipynb
CNN_Training/: CNN_Training.py
PACBED_simulation_CNN_training/: Simulation_PACBED.ipynb  Training_CNN.ipynb
client/: setup.cfg
client/examples/: GMSGUI.s  PACBED GMS client.s  thicknessmap.ipynb  web-api-client.ipynb
client/src/: pacbedclient.py
tests/: Test_script.ipynb  parallelrequests.ipynb
tests/pacbed_files/: rutile_80kV_1.npy  rutile_80kV_2.npy  rutile_80kV_3.npy
webapi/: MANIFEST.in  setup.cfg  web-api-client.ipynb
webapi/src/pacbed_api/: __init__.py  predictor.py  schemas.py
webapi/src/pacbed_api/templates/: form.html
