[metadata]
name = pacbedclient
version = 0.0.1
author = "Dieter Weber, Alexander Clausen"
author_email = "d.weber@fz-juelich.de, a.clausen@fz-juelich.de"

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:
python_requires = >=3.6
py_modules =
    pacbedclient
install_requires =
    numpy
    Pillow
    requests
