[metadata]
name = pacbed_api
version = 0.0.1
author = Alexander Clausen
author-email = a.clausen@fz-juelich.de

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:
python_requires = >=3.9
install_requires =
    fastapi[all]
    numpy
    scikit-image
    tensorflow-cpu
    pandas
